--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-<title>Raymond - A Designer focus on Mechanic and Logo</title>
+<title>Raymond.He - A Designer on the road.</title>
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
 </ul>
 <div class="menu-footer right-boxed">
 <div class="social-list">
-<a href="" class="icon ion-social-twitter"></a>
+<a href="https://x.com/rayisontheway" class="icon ion-social-twitter"></a>
 <a href="" class="icon ion-social-facebook"></a>
 <a href="" class="icon ion-social-googleplus"></a>
 <a href="" class="icon ion-social-linkedin"></a>
