--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-<title>Raymond.He - A Designer on the road.</title>
+<title>Raymond (HXL) - A Designer on the road.</title>
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i&display=swap" rel="stylesheet">
@@ -50,12 +50,10 @@
 <div class="menu-footer right-boxed">
 <div class="social-list">
 <a href="https://x.com/rayisontheway" class="icon ion-social-twitter"></a>
-<a href="" class="icon ion-social-facebook"></a>
-<a href="" class="icon ion-social-googleplus"></a>
-<a href="" class="icon ion-social-linkedin"></a>
-<a href="" class="icon ion-social-dribbble-outline"></a>
+<a href="https://www.facebook.com/raymondhe/" class="icon ion-social-facebook"></a>
+<a href=https://github.com/ehee123/" class="icon ion-social-github"></a>
 </div>
-<div class="copy">© Raymond 2019. All Rights Reseverd<br> Design by LoganCee</div>
+<div class="copy">© Raymond (HXL) 2024. All Rights Reseverd<br> Design by Xinglong</div>
 </div>
 </div>
 
