--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 <div class="menu-footer right-boxed">
 <div class="social-list">
 <a href="https://x.com/rayisontheway" class="icon ion-social-twitter"></a>
-<a href="https://www.facebook.com/raymondhe/" class="icon ion-social-facebook"></a>
-<a href=https://github.com/ehee123/" class="icon ion-social-github"></a>
+<a href="https://www.facebook.com/raymond.he.395" class="icon ion-social-facebook"></a>
+<a href="https://github.com/ehee123" class="icon ion-social-github"></a>
+ <a href="https://github.com/ehee123" class="icon ion-social-wechat"></a>
 </div>
 <div class="copy">© Raymond (HXL) 2024. All Rights Reseverd<br> Design by Xinglong</div>
 </div>
