--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <a href="https://x.com/rayisontheway" class="icon ion-social-twitter"></a>
 <a href="https://www.facebook.com/raymond.he.395" class="icon ion-social-facebook"></a>
 <a href="https://github.com/ehee123" class="icon ion-social-github"></a>
- <a href="https://github.com/ehee123" class="icon ion-social-wechat"></a>
+<a href="https://www.instagram.com/xinglongho/" class="icon ion-social-instagram"></a>
 </div>
 <div class="copy">© Raymond (HXL) 2024. All Rights Reseverd<br> Design by Xinglong</div>
 </div>
@@ -63,7 +63,7 @@
 <a class="brand" href="#">
 <img alt="" src="images/brand.png">
 <div class="brand-info">
-<div class="brand-name">Raymond.</div>
+<div class="brand-name">Raymond(HXL)</div>
 </div>
 </a>
 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
@@ -73,23 +73,23 @@
 </button>
 <div class="contacts d-none d-md-block">
 <div class="contact-item">
-+86 137 0101 9456
++86 137-0101-9456
 </div>
 <div class="contact-item spacer">
 /
 </div>
 <div class="contact-item">
-<a href="cdn-cgi/l/email-protection#2744484953464453675548454255530944484a"><span class="__cf_email__" data-cfemail="294a46475d484a5d695b464b4c5b5d074a4644">raymondhe@163.com</span></a>
+<a href="raymondhe@163.com"><span class="__cf_email__" data-cfemail="294a46475d484a5d695b464b4c5b5d074a4644">raymondhe@163.com</span></a>
 </div>
 </div>
 </header>
-<div class="copy-bottom white boxed">© Raymond 2019.</div>
+<div class="copy-bottom white boxed">© Raymond(HXL) 2024 </div>
 <div class="social-list social-list-bottom boxed">
-<a href="" class="icon ion-social-twitter"></a>
-<a href="" class="icon ion-social-facebook"></a>
-<a href="" class="icon ion-social-googleplus"></a>
-<a href="" class="icon ion-social-linkedin"></a>
-<a href="" class="icon ion-social-dribbble-outline"></a>
+<a href="https://x.com/rayisontheway" class="icon ion-social-twitter"></a>
+<a href="https://www.facebook.com/raymond.he.395" class="icon ion-social-facebook"></a>
+<a href="https://github.com/ehee123" class="icon ion-social-github"></a>
+<a href="https://www.instagram.com/xinglongho/" class="icon ion-social-instagram"></a>
+
 </div>
 <div class="pagepiling">
 <div data-anchor="page1" class="pp-scrollable text-white section section-1">
@@ -130,18 +130,18 @@
 <div class="row-specialization row">
 <div class="col-specialization col-md-6 col-lg-4">
 <span class="icon-specialization icon-laptop-phone"></span>
-<h4 class="text-uppercase">Mobile Design</h4>
-<p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through popularity and increased.</p>
+<h4 class="text-uppercase">Mechanical Design</h4>
+<p>Specially focus on medium voltage switchgear and controlgear field, 20+ years of mech-electrical design experience, 15+ years in world top 500 compmany, mainly focus on new product Development, espacially for Ring Main Unit.</p>
 </div>
 <div class="col-specialization col-md-6 col-lg-4">
 <span class="icon-specialization icon-smartphone-embed"></span>
-<h4 class="text-uppercase">Coding</h4>
-<p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through popularity and increased.</p>
+<h4 class="text-uppercase">Project Managerment</h4>
+<p>New product development project mannagement as project leader or technical leader, cross-functional team communication, Financial/Risk control, team member engagment and so on.Familiar with project management methodolody like water-fall flow, agile and so on.</p>
 </div>
 <div class="col-specialization col-md-6 col-lg-4">
 <span class="icon-specialization icon-diamond2"></span>
-<h4 class="text-uppercase">Illustration</h4>
-<p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through popularity and increased.</p>
+<h4 class="text-uppercase">Logo Design</h4>
+<p>Part time Job，persist because of love. Several Design already went live.</p>
 </div>
 </div>
 </div>
