--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 /
 </div>
 <div class="contact-item">
-<a href="raymondhe@163.com"><span class="__cf_email__" data-cfemail="294a46475d484a5d695b464b4c5b5d074a4644">raymondhe@163.com</span></a>
+<a href="mailto:raymondhe@163.com"><span class="__cf_email__" data-cfemail="294a46475d484a5d695b464b4c5b5d074a4644">raymondhe@163.com</span></a>
 </div>
 </div>
 </header>
