--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="intro">
 <div class="row">
 <div class="col-md-8 col-lg-6">
-<p class="subtitle-top">Raymond Design<br> Studio</p>
+<p class="subtitle-top">Raymond(HXL) Design <br> Studio</p>
 <h1 class="display-2 text-white"><span class="text-primary">Hello</span> I am<br> Raymond.</h1>
 <a class="popup-youtube" href="https://www.youtube.com/watch?v=0O2aH4XLbto"><span class="icon ion-ios-play"></span>Watch video </a>
 </div>
@@ -135,7 +135,7 @@
 </div>
 <div class="col-specialization col-md-6 col-lg-4">
 <span class="icon-specialization icon-smartphone-embed"></span>
-<h4 class="text-uppercase">Project Managerment</h4>
+<h4 class="text-uppercase">Project Mgt.</h4>
 <p>New product development project mannagement as project leader or technical leader, cross-functional team communication, Financial/Risk control, team member engagment and so on.Familiar with project management methodolody like water-fall flow, agile and so on.</p>
 </div>
 <div class="col-specialization col-md-6 col-lg-4">
@@ -170,13 +170,10 @@
  <div class="resume-inner">
 <div class="resume-row">
 <h6 class="resume-type">Specialization course</h6>
-<i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
-<p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
+<i class="resume-study">BEIJING INSTITUE OF PETROCHEMICAL TECHNOLOGY<br>Sep. 1999 - Jul. 2003</i>
+<p class="resume-text">Mechanical design manufacturing and automation</p>
 </div>
 <div class="resume-row">
-<h6 class="resume-type">Academy course</h6>
-<i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
-<p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim </p>
 </div>
 </div>
 </div>
@@ -188,14 +185,14 @@
 <div class="resume-content">
 <div class="resume-inner">
 <div class="resume-row">
-<h6 class="resume-type">WEBDESIGNER & FRONT-END</h6>
-<i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
-<p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
+<h6 class="resume-type">Mech-electronical Design</h6>
+<i class="resume-study">ELDS Technical Center - ABB China<br>Jan 2007 - Mar 2022</i>
+<p class="resume-text">Be Responsible for Technology transfer from Norway, local new products development, like SGCC customized, new generation RMU with SF6, eco-friendly RMU development, and so on./p>
 </div>
 <div class="resume-row">
-<h6 class="resume-type">WORDPRESS DEVELOPER</h6>
-<i class="resume-study">University of studies, Poland, Cracow<br>Jan 2004 - Dec 2006</i>
-<p class="resume-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus nobis animi assumenda sint recusandae! Dolor placeat debitis animi illum quo repellendus pariatur, enim</p>
+<h6 class="resume-type">Logo and Web design</h6>
+<i class="resume-study">Persional Studio <br>Jan 2002 - Current</i>
+<p class="resume-text">Logo design for Clinic workshop SYCPHA of SYPHY, R's Honey, Gongchuang Electric, Yibaida Electric, Ruibang and so on. </p>
 </div>
 </div>
 </div>
