--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </div>
 </div>
 </header>
-<div class="copy-bottom white boxed">© Raymond(HXL) 2024 </div>
+<div class="copy-bottom white boxed">© Raymond(HXL) 2024. </div>
 <div class="social-list social-list-bottom boxed">
 <a href="https://x.com/rayisontheway" class="icon ion-social-twitter"></a>
 <a href="https://www.facebook.com/raymond.he.395" class="icon ion-social-facebook"></a>
@@ -105,7 +105,7 @@
 <div class="row">
 <div class="col-md-8 col-lg-6">
 <p class="subtitle-top">Raymond(HXL) Design <br> Studio</p>
-<h1 class="display-2 text-white"><span class="text-primary">Hello</span> I am<br> Raymond.</h1>
+<h1 class="display-2 text-white"><span class="text-primary">Hello</span> I am<br> Raymond(HXL).</h1>
 <a class="popup-youtube" href="https://www.youtube.com/watch?v=0O2aH4XLbto"><span class="icon ion-ios-play"></span>Watch video </a>
 </div>
 </div>
@@ -131,7 +131,7 @@
 <div class="col-specialization col-md-6 col-lg-4">
 <span class="icon-specialization icon-laptop-phone"></span>
 <h4 class="text-uppercase">Mechanical Design</h4>
-<p>Specially focus on medium voltage switchgear and controlgear field, 20+ years of mech-electrical design experience, 15+ years in world top 500 compmany, mainly focus on new product Development, espacially for Ring Main Unit.</p>
+<p>Specially focus on Medium Voltage switchgear and controlgear field, 20+ years of mech-electrical design experience, 15+ years in world top 500 companies, mainly focus on new product Development, espacially for Ring Main Unit.</p>
 </div>
 <div class="col-specialization col-md-6 col-lg-4">
 <span class="icon-specialization icon-smartphone-embed"></span>
@@ -170,8 +170,8 @@
  <div class="resume-inner">
 <div class="resume-row">
 <h6 class="resume-type">Specialization course</h6>
-<i class="resume-study">BEIJING INSTITUE OF PETROCHEMICAL TECHNOLOGY<br>Sep. 1999 - Jul. 2003</i>
-<p class="resume-text">Mechanical design manufacturing and automation</p>
+<i class="resume-study">Beijing Institute of Petrochemical Technology<br> Sep. 1999 - Jul. 2003</i>
+<p class="resume-text">Mechanical Design Manufacturing and Automation</p>
 </div>
 <div class="resume-row">
 </div>
@@ -185,14 +185,14 @@
 <div class="resume-content">
 <div class="resume-inner">
 <div class="resume-row">
-<h6 class="resume-type">Mech-electronical Design</h6>
+<h6 class="resume-type">Mech-Electronical Design</h6>
 <i class="resume-study">ELDS Technical Center - ABB China<br>Jan 2007 - Mar 2022</i>
 <p class="resume-text">Be Responsible for Technology transfer from Norway, local new products development, like SGCC customized, new generation RMU with SF6, eco-friendly RMU development, and so on./p>
 </div>
 <div class="resume-row">
 <h6 class="resume-type">Logo and Web design</h6>
-<i class="resume-study">Persional Studio <br>Jan 2002 - Current</i>
-<p class="resume-text">Logo design for Clinic workshop SYCPHA of SYPHY, R's Honey, Gongchuang Electric, Yibaida Electric, Ruibang and so on. </p>
+<i class="resume-study">Personal Studio <br> Jan. 2002 - Current</i>
+<p class="resume-text">Logo design for Clinical workshop SYCPHA of SYPHY, Rs Honey, Gongchuang Electric, Yibaida Electric, Ruibang and so on. </p>
 </div>
 </div>
 </div>
