--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
 <h6 class="resume-type">Specialization course</h6>
 <i class="resume-study">Beijing Institute of Petrochemical Technology<br> Sep. 1999 - Jul. 2003</i>
 <p class="resume-text">Mechanical Design Manufacturing and Automation</p>
+<i class="resume-study">ELDS Technical Center, ABB China<br> Jan. 2007 - Mar. 2022</i>
+<p class="resume-text">DFM, DFA, FMEA, Tolerance Stack up, Project Management, MEP....</p>
 </div>
 <div class="resume-row">
 </div>
@@ -186,7 +188,7 @@
 <div class="resume-inner">
 <div class="resume-row">
 <h6 class="resume-type">Mech-Electronical Design</h6>
-<i class="resume-study">ELDS Technical Center - ABB China<br>Jan 2007 - Mar 2022</i>
+<i class="resume-study">ELDS Technical Centre - ABB China<br>Jan 2007 - Mar 2022</i>
 <p class="resume-text">Be Responsible for Technology transfer from Norway, local new products development, like SGCC customized, new generation RMU with SF6, eco-friendly RMU development, and so on./p>
 </div>
 <div class="resume-row">
