--- a/index.html
+++ b/index.html
@@ -172,12 +172,15 @@
 <h6 class="resume-type">Specialization course</h6>
 <i class="resume-study">Beijing Institute of Petrochemical Technology<br> Sep. 1999 - Jul. 2003</i>
 <p class="resume-text">Mechanical Design Manufacturing and Automation</p>
-<div class="resume-row">
+</div>
+ <div class="resume-row">
 <i class="resume-study">ELDS Technical Center, ABB China<br> Jan. 2007 - Mar. 2022</i>
 <p class="resume-text">DFM, DFA, FMEA, Tolerance Stack up, Project Management, MEP....</p>
 </div>
 </div>
 </div>
+ </div>
+ </div>
 <div class="col-md-6 pt-md-5 mt-md-5">
 <h2 class="resume-header title-uppercase">Experience</h2>
 <div class="col-resume">
