--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <div class="resume-row">
 <h6 class="resume-type">Mech-Electronical Design</h6>
 <i class="resume-study">ELDS Technical Centre - ABB China<br>Jan 2007 - Mar 2022</i>
-<p class="resume-text">Be Responsible for Technology transfer from Norway, local new products development, like SGCC customized, new generation RMU with SF6, eco-friendly RMU development, and so on./p>
+<p class="resume-text">Be Responsible for Technology transfer from Norway, local new products development, like SGCC customized, new generation RMU with SF6, eco-friendly RMU development, and so on.</p>
 </div>
 <div class="resume-row">
 <h6 class="resume-type">Logo and Web design</h6>
