--- a/index.html
+++ b/index.html
@@ -229,26 +229,26 @@
 </div>
 </div>
 <div class="col-lg-5 mt-5 mt-xl-0">
-<h2 class="title-uppercase"> <span class="text-primary">the best</span> Websites</h2>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta sit pariatur odio unde deleniti eveniet.
+<h2 class="title-uppercase"> <span class="text-primary">Win-Win</span> </h2>
+I can do whhat you want, here is my completition and capacity.
 <div class="progress-bars">
 <div class="clearfix">
-<div class="number float-left">Mobile Design</div>
-<div class="number float-right">80%</div>
+<div class="number float-left">Mech-Electronical Design</div>
+<div class="number float-right">90%</div>
 </div>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 <div class="clearfix">
-<div class="number float-left">Coding</div>
-<div class="number float-right">70%</div>
+<div class="number float-left">Project Managerment</div>
+<div class="number float-right">80%</div>
 </div>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 <div class="clearfix">
-<div class="number float-left">Illustration</div>
-<div class="number float-right">70%</div>
+<div class="number float-left">Logo Design</div>
+<div class="number float-right">50%</div>
 </div>
 <div class="progress">
 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
